further work on classes and styling

--- a/project4/index.html
+++ b/project4/index.html
@@ -11,6 +11,15 @@
     <header></header>
     <h1>homepage</h1>
     <main>
+
+<section class="top-block"> 
+    <h2>Lorem ipsum dolor sit.</h2>
+    <p>Lorem, ipsum dolor.</p>
+    <img src="" alt="">
+    <button> hello world</button>
+</section>
+
+
       <h2 class="sub-heading">Lorem ipsum dolor sit.</h2>
       <h2>Lorem, ipsum dolor.</h2>
       <h2 class="sub-heading">Lorem, ipsum dolor.</h2>
