--- a/project4/index.html
+++ b/project4/index.html
@@ -11,39 +11,22 @@
     <header></header>
     <h1>homepage</h1>
     <main>
+        <section class="top-block">
+            <h2>Lorem, ipsum dolor.</h2>
+            <p>Lorem, ipsum dolor. </p>
+            <button>hello world</button>
+        </section>
 
-<section class="top-block"> 
-    <h2>Lorem ipsum dolor sit.</h2>
-    <p>Lorem, ipsum dolor.</p>
-    <img src="" alt="">
-    <button> hello world</button>
-</section>
+<!-- B.E.M -->
+
+        <section class="food" >
+            <h3 id="heading-3" class="subheading">Lorem, ipsum dolor.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <p class="burger">Lorem ipsum dolor sit amet.</p>
+            <p class="pizza fruit" id="fruit" style="background-color: pink;">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        </section>
 
 
-      <h2 class="sub-heading">Lorem ipsum dolor sit.</h2>
-      <h2>Lorem, ipsum dolor.</h2>
-      <h2 class="sub-heading">Lorem, ipsum dolor.</h2>
-
-      <h3>this is a heading 3</h3>
-      <section class="food">
-        <h3>Lorem, ipsum dolor.</h3>
-        <p>Lorem ipsum dolor sit amet consectetur.</p>
-        <p class="burger">Lorem ipsum dolor sit amet.</p>
-        <p class="pizza">
-          Lorem, ipsum dolor sit amet consectetur adipisicing.
-        </p>
-      </section>
-
-      <p class="burger">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore,
-        numquam?
-      </p>
-      <p class="text" id="content">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
-        libero, natus iure quod ex nesciunt, tempora blanditiis ipsum dolorum,
-        perferendis nostrum harum aliquam laudantium? Nobis aliquam in id eius
-        ducimus?
-      </p>
     </main>
     <footer></footer>
   </body>
