rgb, hsl, em, etc

--- a/project4/index.html
+++ b/project4/index.html
@@ -10,32 +10,7 @@
   <body>
     <header></header>
     <h1>homepage</h1>
-    <main>
-      <!-- BEM -->
-      <section class="block">
-        <h2 class="block__header">Lorem, ipsum dolor.</h2>
-        <p class="block__text">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates,
-          facilis.
-        </p>
-        <div class="block__content">
-          <p class="block__content__paragraph">Lorem ipsum dolor sit amet.</p>
-          <p
-            class="block__content__paragraph block__content__paragraph--warning"
-          >
-            Lorem ipsum dolor sit amet.
-          </p>
-        </div>
-        <button class="block__button block__button--danger">click me</button>
-        <button class="block__button block__buttin--default">cancel</button>
-      </section>
-
-      <section class="news">
-        <h3>Lorem ipsum dolor sit amet.</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, quae.</p>
-        <button>click</button>
-      </section>
-    </main>
+    <main></main>
 
     <footer></footer>
   </body>
